--- a/exercicio-1/index.html
+++ b/exercicio-1/index.html
@@ -28,9 +28,9 @@
 <body>
  
 <h4>Universidade Federal do Maranhão<br>
-PPGCC<br>
+Programa de Pós-Graduação em Ciência da Computação<br>
 Projeto e Análise de Algoritmos<br>
-Prof.: João Dallyson Sousa de Almeida<br>
+Professor: João Dallyson Sousa de Almeida<br>
 Aluno: Christiano Anderson Neitzke</h4>
 
 <h3>Atividade prática 1</h3>
