novo link imagem

--- a/exercicio-1/index.html
+++ b/exercicio-1/index.html
@@ -55,7 +55,7 @@ basear-se na estratégia de força bruta.</p>
   conectados através de uma rede. A Figura abaixo ilustra três topologias comuns de
   redes: anel, estrela e malha totalmente conectada.
 </p>
-<img src="topologias.png" /> 
+<img src="https://chrisneitzke.github.io/paa/exercicio-1/topologias.png" /> 
 <p>Você recebe uma matriz booleana A [0..n - 1, 0..n - 1], onde n> 3, que deverá ser a
   matriz de adjacência de um grafo que representa uma rede com uma dessas
   topologias. Sua tarefa é determinar qual dessas três topologias, se houver, a matriz
