--- a/lista-3/index.html
+++ b/lista-3/index.html
@@ -171,7 +171,7 @@ function encontrarRespostaQ1() {
   respostaQ1.innerHTML = "";
   respostaQ1.innerHTML += "Potes : "+potes+"<br>";
   respostaQ1.innerHTML += "Tampas: "+tampas+"<br>";
-  respostaQ1.innerHTML += "Kit: "+kits;
+  respostaQ1.innerHTML += "Kit completos: "+kits.substring(0,kits.length-1);
 
   
 }
