--- a/lista-3/index.html
+++ b/lista-3/index.html
@@ -171,9 +171,8 @@ function encontrarRespostaQ1() {
   respostaQ1.innerHTML = "";
   respostaQ1.innerHTML += "Potes : "+potes+"<br>";
   respostaQ1.innerHTML += "Tampas: "+tampas+"<br>";
-  respostaQ1.innerHTML += "Kit completos: "+kits.substring(0,kits.length-1);
-
-  
+  respostaQ1.innerHTML += "Kit completos: "+kits.substring(0,kits.length-1)+"<br><br>";
+  respostaQ1.innerHTML += "Complexidade: Considerando a execução de duas ordenações Merge Sort para ordenar potes e tampas, e uma passada geral recursiva pelo vetor de Potes, a complexidade é O(2nlogn + n)";
 }
 
 
