--- a/lista-3/index.html
+++ b/lista-3/index.html
@@ -188,6 +188,8 @@ var tq2=0;  //contador de complexidade
 buttonRespostaQ2.addEventListener('click', encontrarRespostaQ2);
 buttonGerarQ2.addEventListener('click', gerarNumerosQ2);
 
+
+//Funcao para gerar dados aleatórios no vetor de entrada, na quantidade de elementos I e no valor desejado V
 function gerarNumerosQ2() {
   var temp="";
   for(r=0;r<30;r++) temp+=Math.floor(10+Math.random() * 50)+",";
@@ -198,46 +200,46 @@ function gerarNumerosQ2() {
 }
 gerarNumerosQ2();
 
+// Funçao recursiva usando estratégia de divisao e conquista para solucionar a questao 02
 function pocuraItensProximosV(vetor,itens,valor,indice,tam) {
 
+  // variável extra do tamanho da resposta para tratar a situacao de o vetor de entrada ser menor do que a quantidade I de itens mais próximos desejados
   var tamanhoResp=itens;
   if (tam<tamanhoResp) tamanhoResp=tam;
 
+  // vetor de resposta do tamanho deseajdo (ou menor para caso o vetor de entrada seja muito pequeno) já preenchido com zeros.
   var resp = new Array(parseInt(tamanhoResp)).fill(0);
-  var item;
   
+  // contador de passos para totalizar a execucao de intruções para chegar ao resultado  
   tq2++;
-  // SOLUCAO: problema simples o bastante pra retornar os últimos X elementos como os mais próximos
+
+  // SOLUCAO PEQUENA SUFICIENTE: problema simples o bastante pra retornar os últimos X elementos como os mais próximos quando chegar ao final do vetor
   if (indice >= tam-itens)
   {
     for (i=0;i<tamanhoResp;i++) {
       resp[i]=vetor[indice+i];
       tq2++;
     }
+    // Retorna com o X elementos finais
     return resp;
   }
 
-  tq2++;
   // DIVISAO: chama recursivamente avançando o índice
   resp = pocuraItensProximosV(vetor,itens,valor,indice + 1,tam);
-  
 
-  // compara o retorno da funcao recursiva pra ver se o indice autal é menor do que algum dos itens já na resposta
+  // Compara o retorno da funcao recursiva acima pra ver se o indice autal é menor do que algum dos itens já na resposta
   var menor=0;
   var maior=0;
   for (i=0;i<tamanhoResp;i++) {
     tq2++;
-    // vai atualizando sempre o elemento com maior distância para ser tirado da resposta RESP
+    // Vai atualizando sempre o elemento com maior distância para ser tirado da resposta RESP
     if (Math.abs(resp[i]-valor) > Math.abs(resp[maior]-valor)) { 
       maior=i;  
-      tq2++; 
     }
     
-    tq2++;
-    // se econtrou algum o índice atual do vetor é menor do que algum item da resposta, guarda ele pra ser trocado pelo maior ao final do loop 
+    // Se econtrou algum o índice atual do vetor é menor do que algum item da resposta, guarda ele pra ser trocado pelo maior ao final do loop 
     if (Math.abs(vetor[indice]-valor) < Math.abs(resp[i]-valor)) {
       menor=vetor[indice];
-      tq2++;
     }
   }
 
@@ -245,10 +247,9 @@ function pocuraItensProximosV(vetor,itens,valor,indice,tam) {
   // CONQUISTA: checar se houve algum valor atual é menor do que algum item da resposta, para entao ser trocado pelo maior
   if (menor>0) {
     resp[maior] = menor;
-    tq2++;
   }
 
-  // passa a resposta pra frente pra ser comparada na pilha abaixo da recursao 
+  // Passa a resposta já com o menor incluído e o maior retirado pra frente pra ser comparada na pilha abaixo da recursao 
   return resp;
 }
 
